--- a/styles/style.css
+++ b/styles/style.css
@@ -12,6 +12,9 @@
 
 
 
+
+
+
 /********************/
 /******* RESET ******/
 /********************/
@@ -28,19 +31,28 @@ button:not([disabled]) {
 
 
 
+
+
+
 /*********************/
 /* CUSTOM PROPERTIES */
 /*********************/
 :root {
   --color-yellow: #ffd200;
   --color-white: #ffffff;
-  --color-grey:rgb(233, 233, 233);
+  --color-grey:rgba(233, 233, 233, 0.664);
   --color-shadow-grey: rgb(224, 224, 224);
   --color-orange: rgb(255, 166, 0);
   --color-brown: rgb(90, 58, 28);
-  --color-shine: rgba(191, 203, 255, 0.8);
+  --color-shine: rgba(255, 255, 255, 0.836);
   --color-transparent: transparent;
 }
+
+
+
+
+
+
 
 
 
@@ -49,7 +61,14 @@ button:not([disabled]) {
 /********************/
 body {
   background-color: var(--color-yellow);
+  cursor: url(../images/MMs-cursor-zwart.png), pointer;
 }
+
+
+
+
+
+
 
 
 
@@ -66,7 +85,13 @@ header img {
   padding: 2.5em 0em 0em 0em;
   width: 15%;
   height: 15%;
+  margin-bottom: 1em;
 }
+
+
+
+
+
 
 
 
@@ -117,6 +142,13 @@ main ol li button {
   box-shadow: inset .1em .1em .5em var(--color-white);
 }
 
+
+
+
+
+
+
+
 /********************/
 /****** SCHADUW *****/
 /********************/
@@ -132,12 +164,20 @@ main ol li button::after {
   transform: translateX(-50%);
 }
 
+
+
+
+
+
+
+
+
+
 /********************/
 /****IMAGE M&MS *****/
 /********************/
 main ol li:first-of-type button {
   background-image: url(../images/MMs-buis-rood.svg);
-  cursor: url() 4 12 auto;
 }
 
 main ol li:nth-of-type(2) button {
@@ -167,78 +207,97 @@ main ol li:nth-of-type(7) button {
 
 
 
+
+
+
 /********************/
 /******* BAKJE ******/
 /********************/
 main ol li:last-of-type {
   position: absolute;
-  bottom: 0;
-  left: 0;
+  bottom: -15em;
+  left: 45%;
   transition: all .2s ease-in-out;
 
 }
 
-main ol li:nth-of-type(2):hover ~ li:last-of-type {
-  left: 20%;
+main ol li:last-of-type img{
+  width: 50%;
 }
+
+main ol li:nth-of-type(1):hover ~ li:last-of-type {
+  left: 0%;
+}
+
+main ol li:nth-of-type(2):hover ~ li:last-of-type {
+  /* left: calc(0% + var(--slide-precentage)); */
+  left: 15%;
+}
+
+main ol li:nth-of-type(3):hover ~ li:last-of-type {
+  left: 30%;
+}
+
+/* main ol li:nth-of-type(4):hover ~ li:last-of-type {
+  left: 45%;
+} */
+
+main ol li:nth-of-type(5):hover ~ li:last-of-type {
+  left: 59%;
+}
+
+main ol li:nth-of-type(6):hover ~ li:last-of-type {
+  left: 74%;
+}
+
+main ol li:nth-of-type(7):hover ~ li:last-of-type {
+  left: 89%;
+}
+
 
 
 /********************/
 /******* GLANS ******/
 /********************/
-
 /* https://stackoverflow.com/questions/66812538/using-css-animation-to-make-a-div-element-move-to-each-corner-of-the-page
 https://www.youtube.com/watch?v=2MqPh4mPm78 */
 
-/* main ol li button::before{
+main ol li button::before{
   content:'';
   position: absolute;
   top: 0;
   left: 0;
-  background: linear-gradient(-45deg, var(--color-transparent), var(--color-shine));
+  background: linear-gradient(-30deg, 
+  var(--color-transparent) 0% 82%, 
+  var(--color-shine) 82% 86%,
+  var(--color-transparent) 86% 89%,
+  var(--color-shine) 89% 99%,
+  var(--color-transparent) 99% 100%);
   background-size: 100% 100%;
   height: 100%;
   width: 100%;
-  filter: blur(2px);
   border-radius: 0em 0em 6em 6em;
 }
 
 main ol li button:hover:before{
-  animation: gradient 3s ease infinite;
-  animation-name: glans; 
-  background: red;
+  animation: glans 3s ease 1;
 }
 
 @keyframes glans {
-	0%, 100% {
-		background-position: 0% 50%;
-	}
-	50% {
-		background-position: 100% 50%;
-	}
-} */
+  from {
+    background-position-x: -200%;
+  }
+}
 
 /* @keyframes glans{
 0% {
   transform: translate(0) translateY(0);
 }
 50% {
-  top: 100%;
-  left: 100%;
-  transform: translateX(-100%) translateY(-100%);
+  transform: translateX(0%) translateY(100%);
 }
 100% {
-  top: -5%;
-  left: -5%;
   transform: translateX(0) translateY(0);
 }
 } */
 
-/* {
-  0%, 100%{
-    transform: translateX(0deg);
-  }
-  50%{
-    transform: translateX();
-  }
-} */
