--- a/styles/style.css
+++ b/styles/style.css
@@ -39,8 +39,7 @@ button:not([disabled]) {
 /* CUSTOM PROPERTIES */
 /*********************/
 :root {
-  /* --color-yellow: #ffd200; */
-  --color-yellow: #fff1b4;
+  --color-yellow: #ffe77b;
   --color-white: #ffffff;
   --color-white-text: #ffffff;
   --color-grey:rgba(233, 233, 233, 0.664);
